Add featured images folder, pages folder, and update homepage

--- a/index.html
+++ b/index.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SJ Kon Film</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sawyer Knox | Film Photography</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>
-    <h1>Welcome to SJ Kon Film</h1>
+    <h1 class="site-title">Sawyer Knox</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pages/street.html">Street</a></li>
+        <li><a href="pages/landscape.html">Landscape</a></li>
+        <li><a href="pages/stilllife.html">Still Life</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
   <main>
-    <h2>Analog Photography & 35mm Stories</h2>
-    <p>This site showcases my film photography projects — shot on T-Max, Tri-X, and HP5.</p>
-    <img src="assets/images/sample.jpg" alt="Sample photograph" style="max-width:100%;height:auto;">
+    <section class="featured">
+      <div class="grid">
+        <img src="assets/images/featured/1.jpg" alt="Featured photo 1">
+        <img src="assets/images/featured/2.jpg" alt="Featured photo 2">
+        <img src="assets/images/featured/3.jpg" alt="Featured photo 3">
+        <img src="assets/images/featured/4.jpg" alt="Featured photo 4">
+        <img src="assets/images/featured/5.jpg" alt="Featured photo 5">
+        <img src="assets/images/featured/6.jpg" alt="Featured photo 6">
+      </div>
+    </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 SJ Kon Film</p>
+    <p>© 2025 Sawyer Knox</p>
   </footer>
 </body>
 </html>
+
