Apply white background, elegant fonts, and refined layout

--- a/index.html
+++ b/index.html
@@ -4,23 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sawyer Knox | Film Photography</title>
-  <link rel="stylesheet" href="style.css">
+ <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header>
-    <h1 class="site-title">Sawyer Knox</h1>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="pages/street.html">Street</a></li>
-        <li><a href="pages/landscape.html">Landscape</a></li>
-        <li><a href="pages/stilllife.html">Still Life</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <h1 class="site-title">Sawyer Knox</h1>
+  <nav>
+    <ul class="nav-links">
+      <li class="nav-item works">
+        <a href="#">Works</a>
+        <ul class="dropdown">
+          <li><a href="pages/street.html">Street</a></li>
+          <li><a href="pages/landscape.html">Landscape / Nature</a></li>
+          <li><a href="pages/stilllife.html">Still Life</a></li>
+        </ul>
+      </li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
 
   <main>
     <section class="featured">
