Add featured photographs to homepage gallery

--- a/index.html
+++ b/index.html
@@ -29,16 +29,15 @@
 
 
   <main>
-    <section class="featured">
-      <div class="grid">
-        <img src="assets/images/featured/1.jpg" alt="Featured photo 1">
-        <img src="assets/images/featured/2.jpg" alt="Featured photo 2">
-        <img src="assets/images/featured/3.jpg" alt="Featured photo 3">
-        <img src="assets/images/featured/4.jpg" alt="Featured photo 4">
-        <img src="assets/images/featured/5.jpg" alt="Featured photo 5">
-        <img src="assets/images/featured/6.jpg" alt="Featured photo 6">
-      </div>
-    </section>
+  <section class="gallery">
+  <img src="assets/images/featured/austria.jpg" alt="Austria">
+  <img src="assets/images/featured/bassano.jpg" alt="Bassano del Grappa">
+  <img src="assets/images/featured/IMG_1922.JPG" alt="Portrait in mist">
+  <img src="assets/images/featured/IMG_3364.JPG" alt="Black and white portrait">
+  <img src="assets/images/featured/IMG_7865.jpg" alt="Portrait in sunlight">
+  <img src="assets/images/featured/strasbourg portrait.jpg" alt="Strasbourg street portrait">
+</section>
+
   </main>
 
   <footer>
