Add featured photographs to homepage gallery

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <img src="assets/images/featured/IMG_1922.JPG" alt="Portrait in mist">
   <img src="assets/images/featured/IMG_3364.JPG" alt="Black and white portrait">
   <img src="assets/images/featured/IMG_7865.jpg" alt="Portrait in sunlight">
-  <img src="assets/images/featured/strasbourg portrait.jpg" alt="Strasbourg street portrait">
+  <img src="assets/images/featured/strasbourg_portrait.jpg" alt="Strasbourg street portrait">
 </section>
 
   </main>
