Update featured gallery with new black and white photographs

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
 
   <main>
-  <section class="gallery">
-  <img src="assets/images/featured/austria.jpg" alt="Austria">
-  <img src="assets/images/featured/bassano.jpg" alt="Bassano del Grappa">
-  <img src="assets/images/featured/IMG_1922.JPG" alt="Portrait in mist">
-  <img src="assets/images/featured/IMG_3364.JPG" alt="Black and white portrait">
-  <img src="assets/images/featured/IMG_7865.jpg" alt="Portrait in sunlight">
-  <img src="assets/images/featured/strasbourg_portrait.jpg" alt="Strasbourg street portrait">
+ <section class="gallery">
+  <img src="assets/images/featured/img_0538.jpg" alt="Streetlamp over city">
+  <img src="assets/images/featured/img_2469.jpg" alt="People at street fair">
+  <img src="assets/images/featured/img_2642.jpg" alt="Portrait of man in black and white">
+  <img src="assets/images/featured/img_2645.jpg" alt="Two figures by lighthouse">
+  <img src="assets/images/featured/img_3420.jpg" alt="Mountain reflection on lake">
+  <img src="assets/images/featured/img_3461.jpg" alt="Bison in open plain">
 </section>
 
   </main>
