Add dedicated Works page with category previews

--- a/index.html
+++ b/index.html
@@ -13,14 +13,8 @@
   <h1 class="site-title">Sawyer Knox</h1>
   <nav>
     <ul class="nav-links">
-      <li class="nav-item works">
-        <a href="#">Works</a>
-        <ul class="dropdown">
-          <li><a href="pages/street.html">Street</a></li>
-          <li><a href="pages/landscape.html">Landscape / Nature</a></li>
-          <li><a href="pages/stilllife.html">Still Life</a></li>
-        </ul>
-      </li>
+      <li><a href="works.html">Works</a></li>
+
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
