--- a/works.html
+++ b/works.html
@@ -20,26 +20,26 @@
   </header>
 
   <section class="works-gallery">
-    <div class="work-category">
-      <a href="pages/street.html">
-        <img src="assets/images/featured/IMG_2469.jpg" alt="Street Photography">
-        <div class="overlay"><span>Street</span></div>
-      </a>
-    </div>
-    <div class="work-category">
-      <a href="pages/nature-and-landscapes.html">
-        <img src="assets/images/featured/IMG_3420.JPG" alt="Nature and Landscapes">
-        <div class="overlay"><span>Landscape</span></div>
-      </a>
-    </div>
-   <div class="work-category">
-  <a href="pages/still-life.html">
-    <img src="assets/images/featured/IMG_1922.JPG" alt="Still Life">
-    <div class="overlay"><span>Still Life</span></div>
-  </a>
-</div>
+  <div class="work-category">
+    <a href="pages/street.html">
+      <img src="assets/images/featured/img_2469.jpg" alt="Street Photography">
+      <div class="overlay"><span>Street</span></div>
+    </a>
+  </div>
+  <div class="work-category">
+    <a href="pages/nature-and-landscapes.html">
+      <img src="assets/images/featured/img_3420.jpg" alt="Nature and Landscapes">
+      <div class="overlay"><span>Landscape</span></div>
+    </a>
+  </div>
+  <div class="work-category">
+    <a href="pages/still-life.html">
+      <img src="assets/images/featured/img_0538.jpg" alt="Still Life">
+      <div class="overlay"><span>Still Life</span></div>
+    </a>
+  </div>
+</section>
 
-  </section>
 
   <footer>
     <p>© 2025 Sawyer Knox</p>
