Update categories: Street, Nature and Landscape, Color

--- a/works.html
+++ b/works.html
@@ -6,6 +6,7 @@
   <title>Works | Sawyer Knox</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <header>
     <h1 class="site-title">Sawyer Knox</h1>
@@ -20,29 +21,34 @@
   </header>
 
   <section class="works-gallery">
-  <div class="work-category">
-    <a href="pages/street.html">
-      <img src="assets/images/featured/img_2469.jpg" alt="Street Photography">
-      <div class="overlay"><span>Street</span></div>
-    </a>
-  </div>
-  <div class="work-category">
-    <a href="pages/nature-and-landscapes.html">
-      <img src="assets/images/featured/img_3420.jpg" alt="Nature and Landscapes">
-      <div class="overlay"><span>Landscape</span></div>
-    </a>
-  </div>
-  <div class="work-category">
-    <a href="pages/still-life.html">
-      <img src="assets/images/featured/img_0538.jpg" alt="Still Life">
-      <div class="overlay"><span>Still Life</span></div>
-    </a>
-  </div>
-</section>
+    <!-- STREET -->
+    <div class="work-category">
+      <a href="pages/street.html">
+        <img src="assets/images/featured/img_2469.jpg" alt="Street Photography">
+        <div class="overlay"><span>Street</span></div>
+      </a>
+    </div>
 
+    <!-- NATURE AND LANDSCAPES -->
+    <div class="work-category">
+      <a href="pages/nature-and-landscapes.html">
+        <img src="assets/images/featured/img_3420.jpg" alt="Nature and Landscapes">
+        <div class="overlay"><span>Nature / Landscapes</span></div>
+      </a>
+    </div>
+
+    <!-- COLOR -->
+    <div class="work-category">
+      <a href="pages/color.html">
+        <img src="assets/images/featured/img_0538.jpg" alt="Color Photography">
+        <div class="overlay"><span>Color</span></div>
+      </a>
+    </div>
+  </section>
 
   <footer>
     <p>© 2025 Sawyer Knox</p>
   </footer>
 </body>
 </html>
+
