Add active page highlight and unify header style

--- a/about.html
+++ b/about.html
@@ -3,16 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>sjkonfilm</title>
+  <title>About | Sawyer Knox</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>
-    <h1>sjkonfilm</h1>
+    <h1 class="site-title">
+      <a href="index.html">Sawyer Knox</a>
+    </h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <ul class="nav-links">
+        <li><a href="works.html">Works</a></li>
+        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -23,18 +28,17 @@
     </section>
 
     <section id="gallery">
-  <h3>Gallery Preview</h3>
-  <div class="grid">
-    <img src="assets/images/IMG_1922.JPG" alt="Sample photo 1">
-    <img src="assets/images/IMG_3364.JPG" alt="Sample photo 2">
-    <img src="assets/images/IMG_7865.jpg" alt="Sample photo 3">
-  </div>
-</section>
-
+      <h3>Gallery Preview</h3>
+      <div class="grid">
+        <img src="assets/images/IMG_1922.JPG" alt="Sample photo 1">
+        <img src="assets/images/IMG_3364.JPG" alt="Sample photo 2">
+        <img src="assets/images/IMG_7865.jpg" alt="Sample photo 3">
+      </div>
+    </section>
   </main>
 
   <footer>
-    <p>© 2025 sjkonfilm</p>
+    <p>© 2025 Sawyer Knox</p>
   </footer>
 </body>
 </html>
