--- a/contact.html
+++ b/contact.html
@@ -3,31 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact — SJ Kon Film</title>
+  <title>Contact | Sawyer Knox</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <header>
-    <h1>Contact</h1>
+    <h1 class="site-title">
+      <a href="index.html">Sawyer Knox</a>
+    </h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <ul class="nav-links">
+        <li><a href="works.html">Works</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
   <main>
-    <h2>Get in Touch</h2>
-    <p>If you’d like to collaborate, discuss photography, or just say hi — feel free to reach out.</p>
+    <section id="contact-info">
+      <h2>Get in Touch</h2>
+      <p>If you’d like to collaborate, discuss photography, or just say hi — feel free to reach out.</p>
 
-    <ul>
-      <li>Email: <a href="mailto:sawyerknox@gmail.com">sawyerknox@gmail.com</a></li>
-      <li>Instagram: <a href="https://www.instagram.com/sjkonfilm" target="_blank">@sjkonfilm</a></li>
-    </ul>
+      <ul>
+        <li>Email: <a href="mailto:sawyerknox@gmail.com">sawyerknox@gmail.com</a></li>
+        <li>Instagram: <a href="https://www.instagram.com/sjkonfilm" target="_blank">@sjkonfilm</a></li>
+      </ul>
+    </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 SJ Kon Film</p>
+    <p>© 2025 Sawyer Knox</p>
   </footer>
 </body>
 </html>
