--- a/works.html
+++ b/works.html
@@ -9,10 +9,11 @@
 
 <body>
   <header>
-    <h1 class="site-title">Sawyer Knox</h1>
+    <h1 class="site-title">
+      <a href="index.html">Sawyer Knox</a>
+    </h1>
     <nav>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
         <li><a href="works.html" class="active">Works</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -31,7 +32,7 @@
 
     <!-- NATURE AND LANDSCAPES -->
     <div class="work-category">
-      <a href="pages/nature-and-landscapes.html">
+      <a href="pages/nature-and-landscape.html">
         <img src="assets/images/featured/img_3420.jpg" alt="Nature and Landscapes">
         <div class="overlay"><span>Nature / Landscapes</span></div>
       </a>
@@ -51,4 +52,5 @@
   </footer>
 </body>
 </html>
+
 
