--- a/index.html
+++ b/index.html
@@ -4,34 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sawyer Knox | Film Photography</title>
- <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
- <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header>
-  <h1 class="site-title">Sawyer Knox</h1>
-  <nav>
-    <ul class="nav-links">
-      <li><a href="works.html">Works</a></li>
-
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-
+    <h1 class="site-title">
+      <a href="index.html">Sawyer Knox</a>
+    </h1>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="works.html">Works</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <main>
- <section class="gallery">
-  <img src="assets/images/featured/img_0538.jpg" alt="Streetlamp over city">
-  <img src="assets/images/featured/img_2469.jpg" alt="People at street fair">
-  <img src="assets/images/featured/img_2642.jpg" alt="Portrait of man in black and white">
-  <img src="assets/images/featured/img_2645.jpg" alt="Two figures by lighthouse">
-  <img src="assets/images/featured/img_3420.jpg" alt="Mountain reflection on lake">
-  <img src="assets/images/featured/img_3461.jpg" alt="Bison in open plain">
-</section>
-
+    <section class="gallery">
+      <img src="assets/images/featured/img_0538.jpg" alt="Streetlamp over city">
+      <img src="assets/images/featured/img_2469.jpg" alt="People at street fair">
+      <img src="assets/images/featured/img_2642.jpg" alt="Portrait of man in black and white">
+      <img src="assets/images/featured/img_2645.jpg" alt="Two figures by lighthouse">
+      <img src="assets/images/featured/img_3420.jpg" alt="Mountain reflection on lake">
+      <img src="assets/images/featured/img_3461.jpg" alt="Bison in open plain">
+    </section>
   </main>
 
   <footer>
