Add Street gallery page

--- a/pages/color.html
+++ b/pages/color.html
@@ -55,6 +55,7 @@
       <img src="../assets/images/color/IMG_8035.JPG" alt="Color photo 30">
       <img src="../assets/images/color/IMG_8064.JPG" alt="Color photo 31">
       <img src="../assets/images/color/IMG_8297.JPG" alt="Color photo 32">
+      <img src="../assets/images/color/IMG_8147.JPG" alt="Color photo 33">
     </section>
   </main>
 
