Fix featured image capitalization in Works page

--- a/pages/street.html
+++ b/pages/street.html
@@ -76,6 +76,7 @@
       <img src="../assets/images/street/IMG_9889.JPG" alt="Street photo 51">
       <img src="../assets/images/street/IMG_9893.JPG" alt="Street photo 52">
       <img src="../assets/images/street/IMG_9908.JPG" alt="Street photo 53">
+      <img src="../assets/images/street/IMG_7470.JPG" alt="Street photo 54">
     </section>
   </main>
 
