--- a/works.html
+++ b/works.html
@@ -22,13 +22,15 @@
   </header>
 
   <section class="works-gallery">
+    
     <!-- STREET -->
-    <div class="work-category">
-      <a href="pages/street.html">
-        <img src="assets/images/featured/img_3461.jpg" alt="Street Photography">
-        <div class="overlay"><span>Street</span></div>
-      </a>
-    </div>
+<div class="work-category">
+  <a href="pages/street.html">
+    <img src="assets/images/featured/img_3461.jpg" alt="Street Photography" loading="lazy">
+    <div class="overlay"><span>Street</span></div>
+  </a>
+</div>
+
 
     <!-- SCENES -->
     <div class="work-category">
