vertical page added 1

--- a/works.html
+++ b/works.html
@@ -47,6 +47,15 @@
         <div class="overlay"><span>Color</span></div>
       </a>
     </div>
+
+    <!-- VERTICAL -->
+<div class="work-category">
+  <a href="pages/vertical.html">
+    <img src="assets/images/featured/img_2645.jpg" alt="Vertical Photography">
+    <div class="overlay"><span>Vertical</span></div>
+  </a>
+</div>
+
   </section>
 
   <footer>
