vertical cat and mobie fix

--- a/pages/vertical.html
+++ b/pages/vertical.html
@@ -45,6 +45,8 @@
       <img src="../assets/images/vertical/IMG_5824.JPG" alt="Vertical photo 20">
       <img src="../assets/images/vertical/IMG_5966.JPG" alt="Vertical photo 21">
       <img src="../assets/images/vertical/IMG_7945 Copy.JPG" alt="Vertical photo 22">
+      <img src="../assets/images/vertical/IMG_0639.jpg" alt="Vertical photo 23">
+      <img src="../assets/images/vertical/IMG_7326.JPG" alt="Vertical photo 24">
     </section>
   </main>
 
