--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="index-page">
   <header>
     <h1 class="site-title">
       <a href="index.html">Sawyer Knox</a>
