about section update 1

--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About | Sawyer Knox</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -21,19 +21,22 @@
     </nav>
   </header>
 
-  <main>
-    <section id="intro">
-      <h2>Black & White 35mm Film Photography</h2>
-      <p>Capturing street, nature, and moments in motion.</p>
+  <main class="about-page">
+    <section class="about-text">
+      <h2>About</h2>
+      <p>
+        I’m a film photographer based in Portland, Oregon, focused on quiet moments —
+        light moving across people and places. I work primarily with 35mm black and white film,
+        developing everything by hand. Photography, for me, is less about documentation
+        and more about preservation — of rhythm, feeling, and time.
+      </p>
     </section>
 
-    <section id="gallery">
-      <h3>Gallery Preview</h3>
-      <div class="grid">
-        <img src="assets/images/IMG_1922.JPG" alt="Sample photo 1">
-        <img src="assets/images/IMG_3364.JPG" alt="Sample photo 2">
-        <img src="assets/images/IMG_7865.jpg" alt="Sample photo 3">
-      </div>
+    <section class="about-gallery">
+      <img src="assets/images/about/000017070035.jpg" alt="Self portrait 1">
+      <img src="assets/images/about/IMG_0450.JPG" alt="Self portrait 2">
+      <img src="assets/images/about/IMG_1659.JPG" alt="Self portrait 3">
+      <img src="assets/images/about/IMG_1711.JPG" alt="Self portrait 4">
     </section>
   </main>
 
