abot page update 4

--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
     <section class="about-text">
       <h2>About</h2>
       <p>
-        I’m a film photographer based in Portland, Oregon, focused on quiet moments —
-        light moving across people and places. I work primarily with 35mm black and white film,
-        developing everything by hand. Photography, for me, is less about documentation
-        and more about preservation — of rhythm, feeling, and time.
+        My name is Sawyer. I am 24. I try to travel and do new things and take my camera
+        wherever I go. I typically shoot 35mm B&W film on my Konica Autoreflex T3. I 
+        am based out of Portland, Oregon for now. 
+      
       </p>
     </section>
 
