--- a/about.html
+++ b/about.html
@@ -25,9 +25,11 @@
     <section class="about-text">
       <h2>About</h2>
       <p>
-        My name is Sawyer. I am 24. I try to travel and do new things and take my camera
-        wherever I go. I typically shoot 35mm B&W film on my Konica Autoreflex T3. I 
-        am based out of Portland, Oregon for now. 
+       My name is Sawyer. I’m twenty-four years old, born and raised in Tulsa,
+       Oklahoma. I keep my Konica Autoreflex T3 with me if I'm going anywhere
+       worth while. I mostly shoot HP5 and develop it myslef. Most of my photos
+       come from traveling, wandering aimlessly, and trying to capture small moments
+       that feel worth remembering. I am based out of Portland, Oregon for now. 
       
       </p>
     </section>
