contact page update 1

--- a/contact.html
+++ b/contact.html
@@ -21,14 +21,18 @@
     </nav>
   </header>
 
-  <main>
-    <section id="contact-info">
-      <h2>Get in Touch</h2>
-      <p>If you’d like to collaborate, discuss photography, or just say hi — feel free to reach out.</p>
+  <main class="contact-page">
+    <section class="contact-text">
+      <h2>Contact</h2>
+      <p>
+        I’m always open to collaborating, trading prints, or just talking about photography.
+        Feel free to reach out — I check messages pretty often.
+      </p>
 
-      <ul>
-        <li>Email: <a href="mailto:sawyerknox@gmail.com">sawyerknox@gmail.com</a></li>
+      <ul class="contact-links">
+        <li>Email: <a href="mailto:sjkonfilm@gmail.com">sjkonfilm@gmail.com</a></li>
         <li>Instagram: <a href="https://www.instagram.com/sjkonfilm" target="_blank">@sjkonfilm</a></li>
+        <li>Instagram (personal): <a href="https://www.instagram.com/sawyer.j.knox" target="_blank">@sawyer.j.knox</a></li>
       </ul>
     </section>
   </main>
