contact page update 2

--- a/contact.html
+++ b/contact.html
@@ -25,17 +25,25 @@
     <section class="contact-text">
       <h2>Contact</h2>
       <p>
-        I’m always open to collaborating, trading prints, or just talking about photography.
-        Feel free to reach out — I check messages pretty often.
+        Here are ways to reach me and get in touch. Reach
+        out to order prints, if i took your picture and
+        and you want to see it, or just to say hi. 
       </p>
 
-      <ul class="contact-links">
-        <li>Email: <a href="mailto:sjkonfilm@gmail.com">sjkonfilm@gmail.com</a></li>
-        <li>Instagram: <a href="https://www.instagram.com/sjkonfilm" target="_blank">@sjkonfilm</a></li>
-        <li>Instagram (personal): <a href="https://www.instagram.com/sawyer.j.knox" target="_blank">@sawyer.j.knox</a></li>
-      </ul>
-    </section>
-  </main>
+      <div class="contact-links">
+  <p>
+    <strong>Email:</strong> 
+    <a href="mailto:sjkonfilm@gmail.com">sjkonfilm@gmail.com</a>
+  </p>
+  <p>
+    <strong>Instagram (film):</strong> 
+    <a href="https://www.instagram.com/sjkonfilm" target="_blank">@sjkonfilm</a>
+  </p>
+  <p>
+    <strong>Instagram (personal):</strong> 
+    <a href="https://www.instagram.com/sawyer.j.knox" target="_blank">@sawyer.j.knox</a>
+  </p>
+</div>
 
   <footer>
     <p>© 2025 Sawyer Knox</p>
