--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </h1>
     <nav>
       <ul class="nav-links">
-        <li><a href="works.html">Works</a></li>
+        <li><a href="works.html">Work</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
