contact page update 3

--- a/contact.html
+++ b/contact.html
@@ -22,28 +22,29 @@
   </header>
 
   <main class="contact-page">
-    <section class="contact-text">
-      <h2>Contact</h2>
-      <p>
-        Here are ways to reach me and get in touch. Reach
-        out to order prints, if i took your picture and
-        and you want to see it, or just to say hi. 
-      </p>
+  <section class="contact-text">
+    <h2>Contact</h2>
+    <p>
+      Here are a few ways to reach me. Feel free to reach out to order prints,
+      if I took your picture and you’d like to see it, or just to say hi.
+    </p>
 
-      <div class="contact-links">
-  <p>
-    <strong>Email:</strong> 
-    <a href="mailto:sjkonfilm@gmail.com">sjkonfilm@gmail.com</a>
-  </p>
-  <p>
-    <strong>Instagram (film):</strong> 
-    <a href="https://www.instagram.com/sjkonfilm" target="_blank">@sjkonfilm</a>
-  </p>
-  <p>
-    <strong>Instagram (personal):</strong> 
-    <a href="https://www.instagram.com/sawyer.j.knox" target="_blank">@sawyer.j.knox</a>
-  </p>
-</div>
+    <div class="contact-links">
+      <p>
+        <strong>Email:</strong>
+        <a href="mailto:sjkonfilm@gmail.com">sjkonfilm@gmail.com</a>
+      </p>
+      <p>
+        <strong>Instagram (film):</strong>
+        <a href="https://www.instagram.com/sjkonfilm" target="_blank">@sjkonfilm</a>
+      </p>
+      <p>
+        <strong>Instagram (personal):</strong>
+        <a href="https://www.instagram.com/sawyer.j.knox" target="_blank">@sawyer.j.knox</a>
+      </p>
+    </div>
+  </section>
+</main>
 
   <footer>
     <p>© 2025 Sawyer Knox</p>
