updated home photo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <main>
     <section class="gallery">
-      <img src="assets/images/featured/img_0538.jpg" alt="Streetlamp over city">
+      <img src="assets/images/featured/img_8634.JPG" alt="Swingset on beach">
       <img src="assets/images/featured/000094820015.jpg" alt="Canon Beach Birds">
       <img src="assets/images/featured/img_2642.jpg" alt="Portrait of man in black and white">
       <img src="assets/images/featured/img_2645.jpg" alt="Two figures by lighthouse">
