--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     </h1>
     <nav>
       <ul class="nav-links">
-        <li><a href="works.html">Works</a></li>
+        <li><a href="works.html">Work</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html" class="active">Contact</a></li>
       </ul>
