--- a/pages/street.html
+++ b/pages/street.html
@@ -14,7 +14,7 @@
     </h1>
     <nav>
       <ul class="nav-links">
-        <li><a href="../works.html" class="active">Works</a></li>
+        <li><a href="../works.html" class="active">Work</a></li>
         <li><a href="../about.html">About</a></li>
         <li><a href="../contact.html">Contact</a></li>
       </ul>
