fixed vertical cat photo crop

--- a/works.html
+++ b/works.html
@@ -49,7 +49,7 @@
     </div>
 
     <!-- VERTICAL -->
-<div class="work-category">
+<div class="work-category vertical">
   <a href="pages/vertical.html">
     <img src="assets/images/featured/img_2628.jpg" alt="Vertical Photography">
     <div class="overlay"><span>Vertical</span></div>
